Fixed storeys js lib path (require / nunjucks).

--- a/tests/test.html
+++ b/tests/test.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="static/css/qunit.css">
     <script type="text/javascript">
       var require = {
-        baseUrl: '../test_dir/',
+        baseUrl: '../tests/',
         config: {
           settings: {
             // settings for storeys app
@@ -46,7 +46,7 @@
   <body>
       <div id="qunit"></div>
       <div id="qunit-fixture"></div>
-      <script data-main="static/js/main" src="../submodules/require/require.js"
+      <script data-main="static/js/main" src="../submodules/storeys/submodules/requirejs/require.js"
               type="text/javascript" charset="utf-8">
       </script>
   </body>
