- `url` templaetag support

--- a/tests/index.html
+++ b/tests/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="static/css/qunit.css">
     <script type="text/javascript">
       var require = {
-        baseUrl: '../tests/',
+        baseUrl: '/tests/',
         config: {
           settings: {
             // settings for storeys app
